# queriously

./: .gitignore  README.md  index.html  package-lock.json  package.json  spec.md  tailwind.config.ts
apps/marketing/: index.html  package.json
apps/marketing/src/: App.tsx  index.css
python/: main.py  requirements.txt
python/core/: chunker.py  embedder.py  marginalia_engine.py  pdf_parser.py  reading_modes.py  vector_store.py
python/models/: schemas.py
python/routers/: config.py  ingest.py  marginalia.py  qa.py  summarize.py
python/tests/: test_qa_retrieval_context.py
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs  sidecar.rs
src-tauri/src/commands/: ai.rs  annotations.rs  config.rs  mod.rs  pdf.rs  sidecar_cmd.rs
src/components/chat/: ChatPanel.tsx  MessageBubble.tsx  SummaryPanel.tsx
src/components/layout/: RightPanel.tsx  StatusBar.tsx  TopBar.tsx
src/components/marginalia/: MarginaliaNote.tsx
src/components/onboarding/: OnboardingModal.tsx
src/components/pdf/: AnnotationLayer.tsx  FloatingToolbar.tsx  MarginaliaLayer.tsx  PDFViewer.tsx  PdfPage.tsx
src/components/ui/: Logo.tsx
src/hooks/: useAnnotations.ts  useChat.ts  useLlmConfig.ts  useMarginalia.ts  usePdf.ts  useReadingProgress.ts
src/lib/: pdfjs.ts  tauri.ts
src/store/: annotationStore.ts  chatStore.ts  libraryStore.ts  marginaliaStore.ts  pdfStore.ts  settingsStore.ts  summaryStore.ts
src/styles/: globals.css
